# ssdid-wallet

./: .gitignore  CLAUDE.md  README.md  index.html
.github/workflows/: android-build.yml  android-ci.yml  android-publish.yml  android-release.yml  ios-ci.yml  ios-publish.yml  sdk-ci.yml
.superpowers/brainstorm/94623-1773133949/: page-layout.html  visual-direction.html
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  kazsign_jni.c
android/app/src/main/cpp/kazsign/include/kaz/: kdf.h  security.h  sign.h
android/app/src/main/cpp/kazsign/src/internal/: der.c  detached.c  kdf.c  p12.c  security.c  sha3.c  sign.c  x509.c
android/app/src/main/cpp/libs/openssl/arm64-v8a/include/openssl/: configuration.h
android/app/src/main/cpp/libs/openssl/arm64-v8a/lib/pkgconfig/: libssl.pc  openssl.pc
android/app/src/main/cpp/libs/openssl/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android/docs/guides/: android-release-signing-setup.md
android/docs/plans/: 2026-03-09-credential-revocation-checking.md  2026-03-09-wallet-hardening.md  2026-03-10-recovery-ui.md  2026-03-10-ssdid-drive-integration-design.md  2026-03-10-ssdid-drive-integration.md
android/sdk/: gradle.properties
android/sdk/ssdid-core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/sdk/ssdid-core-testing/: build.gradle.kts
android/sdk/ssdid-pqc/: build.gradle.kts
android/whatsnew/: whatsnew-en-US
api/: Caddyfile  Dockerfile  deploy.sh  ssdid-email-verify.container  ssdid-email-verify.service
api/SsdidEmailVerify/: Program.cs  SsdidEmailVerify.csproj  appsettings.json
api/SsdidEmailVerify/Properties/: launchSettings.json
beta-api/: .dockerignore  Containerfile  README.md  package-lock.json  package.json  server.js
docs/: 12.SSDID-Gap-Analysis-And-Remediation.md  DEPLOY.md  SSDID-System-Flows.md  use-cases-and-e2e-tests.md  user-manual-offline-validation.md
docs/plans/: 2026-03-06-ssdid-mobile-app-design.md  2026-03-06-ssdid-mobile-implementation-plan.md  2026-03-06-ssdid-wallet-implementation-plan.md  2026-03-09-android-completion-design.md  2026-03-09-android-completion-plan.md  2026-03-10-sign-in-with-ssdid-design.md  2026-03-10-sign-in-with-ssdid-plan.md  2026-03-11-profile-setup-design.md  2026-03-11-profile-setup-plan.md  2026-03-13-notifications-ui-design.md  2026-03-13-notifications-ui.md  2026-03-14-phase1-wallet-mvp-plan.md  2026-03-14-phase2-openid4vc-plan.md  2026-03-14-phase2a-openid4vp-design.md  2026-03-14-phase2a-openid4vp-plan.md  2026-03-14-phase2b-openid4vci-design.md  2026-03-14-phase3-mdoc-dcapi-didcomm-design.md  2026-03-14-phase3-mdoc-dcapi-plan.md  2026-03-14-ssdid-interop-sdk-design.md  2026-03-14-ssdid-sdk-design.md  2026-03-14-ssdid-sdk-implementation-plan.md
docs/superpowers/plans/: 2026-03-10-ssdid-landing-page.md  2026-03-16-connected-services.md  2026-03-16-identity-scoped-profiles.md  2026-03-16-secure-enclave-key-wrapping.md  2026-03-24-ecosystem-remaining-items.md  2026-03-25-offline-validation.md  2026-03-26-offline-validation-e2e-android.md  2026-03-26-offline-validation-e2e-ios.md  2026-03-27-mandatory-biometric-lock.md  2026-03-27-ssdid-sdk-extraction.md
docs/superpowers/specs/: 2026-03-10-ssdid-landing-page-design.md  2026-03-16-secure-enclave-key-wrapping-design.md  2026-03-17-production-readiness-plan.md  2026-03-17-vc-service-metadata.md  2026-03-20-integration-test-design.md  2026-03-25-offline-validation-design.md  2026-03-26-offline-validation-e2e-tests-design.md  2026-03-27-mandatory-biometric-lock-design.md  2026-03-27-ssdid-sdk-extraction-design.md
e2e/: README.md
e2e/maestro/: run-all.sh
e2e/maestro/config/: android.yaml  ios.yaml
e2e/maestro/flows/: uc01-onboarding.yaml  uc02-create-identity.yaml  uc03-wallet-home.yaml  uc04-identity-detail.yaml  uc05-deactivate-identity.yaml  uc07-authentication.yaml  uc11-recovery.yaml  uc12-key-rotation.yaml  uc14-backup.yaml  uc15-autolock.yaml  uc16-settings.yaml
e2e/playwright/: package-lock.json  package.json  playwright.config.ts
e2e/playwright/playwright-report/: index.html
e2e/playwright/tests/: deeplink-validation.spec.ts  drive-integration.spec.ts  registry-api.spec.ts
iconsets/macos/: AppIcon.icns
ios/: SsdidWallet.entitlements  project.yml
ios/.spm-cache/: workspace-state.json
ios/SsdidWallet/: Info.plist
ios/SsdidWallet.xcodeproj/: project.pbxproj
ios/SsdidWallet/App/: AppCoordinator.swift  ServiceContainer.swift  SsdidWalletApp.swift
ios/SsdidWallet/Domain/: SsdidClient.swift
ios/SsdidWalletTests/: AuthorizationRequestTests.swift  BackupCryptoTests.swift  CanonicalJsonTests.swift  ClassicalProviderTests.swift  DcqlMatcherTests.swift  DidJwkResolverTests.swift  DidKeyResolverTests.swift  KeyBindingJwtTests.swift  MultiMethodResolverTests.swift  MulticodecTests.swift  OpenId4VpHandlerTests.swift  OpenId4VpIntegrationTests.swift  OpenId4VpTransportTests.swift  PqcProviderTests.swift  PresentationDefinitionMatcherTests.swift  RegistryIntegrationTests.swift  SdJwtIssuerTests.swift  SdJwtParserTests.swift  SsdidWalletTests.swift  StoredSdJwtVcTests.swift  VpTokenBuilderTests.swift
ios/SsdidWalletTests/Offline/: MockVerifier.swift  (+3 more)
ios/SsdidWalletUITests/: IdentityCreationUITests.swift  RecoveryFlowUITests.swift
ios/scripts/: build-liboqs-xcframework.sh
landing/: index.html
mockup/: app.js  index.html  styles.css
sdk/docs/: backup.md  configuration.md  credentials.md  custom-implementations.md  device-management.md  getting-started.md  identity-management.md  key-rotation.md  migration-guide.md  notifications.md  presentations.md  recovery.md  sd-jwt.md  verification.md
test-vectors/did-resolution/: did-jwk-ed25519.json  did-key-ed25519.json  did-key-p256.json
test-vectors/oid4vp/: authorization-request-by-reference.json  authorization-request-by-value.json  authorization-request-invalid.json  dcql-matching.json  pe-matching.json
test-vectors/sd-jwt/: basic-issuance.json  key-binding.json  selective-disclosure.json
(+2457 files in other folders)
